# PynamiX

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES_SUMMARY.md  MANIFEST.in  PynamiX Examples.ipynb  README.md  RUN_TESTS.md  TEST_REPORT.md  codecov.yml  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: conf.py  index.rst  jupyter-example.ipynb  modules.rst
docs/_build/doctrees/: environment.pickle
docs/_build/html/: .buildinfo  genindex.html  py-modindex.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/notebooks/: Eranga.ipynb  Fibres.ipynb  NormaliseRotation.ipynb  OpticalRadiographs.ipynb  PynamiX-Examples.ipynb  SurfaceEstimation_D0.tif  SurfaceEstimation_D1.tif  SurfaceEstimation_D1_flat.tif  Surface_estimation.ipynb
notebooks/: Eranga.ipynb  Fibres.ipynb
pynamix/: __init__.py  color.py  data.py  exposure.py  filter.py  intruder_tracking.py  io.py  measure.py  plotting.py  testing.py
pynamix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pynamix/tests/: __init__.py  test_color.py  test_data.py  test_exposure.py  test_io.py  test_measure.py  test_pipeline.py  test_plotting.py  testing.py
